Hopefully fix double-tap zoom on iOS:
I don't have an iOS device to test.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ html {
     right: 0;
     overflow: hidden;
     user-select: none;
+    touch-action: manipulation;
   }
   * {
     box-sizing: border-box;
